# humanoid-robot

./: .gitignore  README.md  dockerignore  pyproject.toml
src/: train_g1_tracking.py
src/shell/: download_model.sh  full_pipeline.sh  run_pipeline.sh
src/zshumanoid/: amp_feautre.py  amp_mvae.py  ppo.py
src/zshumanoid/envs/mjlab/: tracking_cfg.py
src/zshumanoid/motion/: formats.py  skill_library.py  transitions.py
src/zshumanoid/pipeline/: gem_interface.py  gmr_retarget.py
tests/: pointmass_env.py  train_pointmass.py
tools/: gem_to_gmr.py  gmr_pkl_to_csv.py
