[project]
name = "zshumanoid"
version = "0.1.0"
description = "Zero-shot humanoid robot motion tracking and control"
authors = [{ name = "Ki Wook Kim" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch (>=2.4.0,<3.0.0)",
    "numpy (>=1.26,<2.0)",
    "mujoco (>=3.2.0,<4.0.0)",
    "gymnasium (>=0.29.1,<0.30.0)",
    "pyyaml (>=6.0,<7.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "wandb (>=0.22.3)",
    "mjlab (>=1.5.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "zshumanoid", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
